Phani | Update CSS to fix overlapping of scrollbar and ot blocks

--- a/ui/app/styles/ot/_otCalendar.scss
+++ b/ui/app/styles/ot/_otCalendar.scss
@@ -27,8 +27,11 @@
       text-align: center;
       float: left;
       border-bottom: .5px solid lightgrey;
-      padding: 10px 0;
+      padding: 12px 0;
       font-family: OpenSansSemiBold;
+    }
+    hr{
+      margin-bottom: 0;
     }
   }
   .provider-location-name{
